Create Loading indicator component

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body ng-app="app">
+<loading></loading>
 <div ui-view="city"></div>
 <div ui-view="university"></div>
 <div ui-view="faculty"></div>
