Create Edit component

--- a/src/index.html
+++ b/src/index.html
@@ -15,5 +15,6 @@
 <div ui-view="city"></div>
 <div ui-view="university"></div>
 <div ui-view="faculty"></div>
+<div ui-view="edit"></div>
 </body>
 </html>
